legend gap fix

--- a/web/LESS/custom.less
+++ b/web/LESS/custom.less
@@ -1079,8 +1079,8 @@ body {
 	.legend-box {
 		@media (min-width: 600px) {
 			display: none;//if highchart legend height is less than 104px; initially hidden
-			height: 103px;//height of high chart legend with four answer or option
-			left: 34%;
+			height: 188px;//height of high chart legend with four answer or option
+			left: 20%;
 			position: absolute;
 			bottom: 18px;
 			width: 100%;	
@@ -1492,7 +1492,7 @@ th.sorting_asc {
 
 th.sorting_asc:before {
     content: "";
-    width: 15px;
+    width: 20px;
     height: 20px;
     display: block;
     position: absolute;
@@ -1504,7 +1504,7 @@ th.sorting_asc:before {
 
 th.sorting_desc:before {
     content: "";
-    width: 15px;
+    width: 20px;
     height: 20px;
     display: block;
     position: absolute;
@@ -1610,8 +1610,8 @@ table.dataTable th, table.dataTable td {
     text-align: center;
     color: #FFF;
     display: block;
-    height: 27px;
-	top: -2px;
+    height: 13px;
+    top: 4px;
     background-size: 14px;
 }
 /*target Internet Explorer 9 and Internet Explorer 10:*/
